Fixed form issue from merge. Fix answer content display overflow.

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 }
 
 header {
-  
   line-height: 50px;
   display: flex;
   flex-direction: row;
@@ -20,7 +19,7 @@ header {
   margin: 40px;
 
   border-radius: 8px;
-  background-image:  url("images/confetti-triviology\ \(1\).jpg");
+  background-image: url("images/confetti-triviology\ \(1\).jpg");
   background-size: cover;
 }
 
@@ -38,7 +37,7 @@ body {
 }
 
 h1 {
-  cursor:default;
+  cursor: default;
   font-family: "Bungee Shade", cursive;
   font-size: 50px;
   margin: auto 1em;
@@ -70,7 +69,6 @@ p {
   color: rgb(44, 44, 43);
 }
 
-
 .card {
   display: flex;
   justify-content: center;
@@ -96,9 +94,8 @@ p {
 }
 
 #pointsDisplay {
-
-  cursor:default;
-  font-family: 'Fredoka One', cursive;
+  cursor: default;
+  font-family: "Fredoka One", cursive;
   margin: 35px;
   padding: 25px;
   background-color: rgb(249, 252, 255);
@@ -329,6 +326,7 @@ label {
   font-size: 20px;
   margin: 0.5em 1em;
   min-width: 60px;
+  white-space: nowrap;
 }
 /*===== Result Card ======*/
 
